@@ -9,6 +9,10 @@
     * graphics/__init__.py: Import `imshow`.
     * graphics/graphics.py(imshow): New function.
 
+    Automatically determine image format in `save_rgb`.
+
+    * graphics/graphics(save_rgb): Let PIL determine image format.
+
 2013-08-12	tboggs <tboggs@users.sourceforge.net>
 
     Added windowed mode to the RX anomaly detector.
